--- a/reserveTime/core/templates/partials/company-header.html
+++ b/reserveTime/core/templates/partials/company-header.html
@@ -20,9 +20,9 @@
                 <a href="{% url 'account:user-profile' user.pk %}" class="d-flex user-profile-link">
                     <div class="side">
                         {% if user.profile_img %}
-                        <img src="{{user.profile_img.url}}" width="50px" alt="Profile photo">
+                            <img src="{{user.profile_img.url}}" width="70px" height="100%" alt="Profile photo">
                         {% else %}
-                        <img src="{% static 'images/profile2.png' %}" width="50px" alt="Profile photo">
+                            <img src="{% static 'images/profile2.png' %}" width="50px" alt="Profile photo">
                         {% endif %}
                         <div class="d-flex flex-direction-column ml-2 admin-user-box" style="color: #5B5B5B ;">
                             <span class="mt-1">Welcome</span>
@@ -35,24 +35,39 @@
                 <div class="notification">
                     <button type="button" class="header-btn notification-btn">
                         {% if notifications %}
-                            <span class="notification-count"></span>
+                            <span class="notification-count" style="top:28px;"></span>
                         {% endif %}
                         <i class="far fa-bell"></i>
                     </button>
-                    <div class="custom-drop-down box3 p-3 shadow" style="display: none;">
+                    <div class="custom-drop-down box3 scroll-y p-3 shadow" style="display: none;">
                         <div class="triangle"></div>
-                        <span class="pb-3">Notifications</span>
-                        
+                        <span>Notifications</span>
                         {% if notifications %}
-                            {% if request.user.is_company %}
-                                {% for notification in notifications %}
-                                    <a class="pl-2 pr-2" href="{% url 'restaurant:company-reservations' user.company.pk %}">{{notification.text}}</a>
-                                {% endfor %}
-                            {% else %}
-                                {% for notification in notifications %}
-                                    <a class="pl-2 pr-2 mb-2" href="{% url 'account:user-profile' request.user.pk %}">{{notification.sender.company.company_name}}</a>
-                                {% endfor %}
-                            {% endif %}
+                            {% for notification in notifications %}
+                                {% if notification.notification_type == 'new_reservation' %}
+                                    <a class="pl-2 pr-2" href="{% url 'restaurant:company-reservations' user.company.pk %}">
+                                        <div class="d-flex align-items-center">
+                                            <i class="far fa-clock mr-3"></i>
+                                            <div class="d-column">
+                                                {{notification.text}}
+                                                <small>From {{notification.sender.email}}</small>   
+                                            </div>
+                                        </div>
+                                    </a>
+                                {% elif notification.notification_type == 'accept_reservation' %}
+                                    <a class="pl-2 pr-2 mb-2 d-column" href="{% url 'account:user-profile' request.user.pk %}">
+                                        <div class="d-flex align-items-center">
+                                            <i class="far fa-calendar-check mr-3"></i>
+                                            <div class="d-column">
+                                                {{notification.text}}
+                                                <small>By {{notification.sender.company.company_name}}</small>   
+                                            </div>
+                                        </div>
+                                        
+                                    </a>
+                                {% endif %}
+                            {% endfor %}
+
                             <form  class="full mt-2 mb-2" id="readNotifications" action="{% url 'core:read-notifications' %}" method="POST">
                                 {% csrf_token %}
                                 <input type="submit" class="btn btn-outline-secondary float-r" value="Mark all as read!">
@@ -61,6 +76,7 @@
                             <img src="{% static 'images/animat-bell-color.gif' %}" width="50%" class="m-auto" alt="">
                             <p class="pl-2 pr-2 bold text-center">Nothing to see here, you’re all caught up!</p>
                         {% endif %}
+                        
                     </div>
                 </div>
             </div>
