--- a/reserveTime/core/templates/user-saved-restaurants.html
+++ b/reserveTime/core/templates/user-saved-restaurants.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
     <title>Saved Restaurants</title>
     
     <style>
@@ -30,10 +35,10 @@
     
     {% include 'partials/header.html' %}
 
-    <div class="container custom-container bg-white border-top">
+    <div class="container custom-container bg-white shadow border-top">
         <div class="row username-box">  
             {% if user.profile_img %}
-                <img src="{{user.profile_img.url}}" alt="">
+                <a data-fancybox="gallery" href="{{user.profile_img.url}}"><img src="{{user.profile_img.url}}"></a>
             {% else %}
                 <img src="{% static 'images/profile.png' %}" alt="">
             {% endif %}
@@ -44,7 +49,7 @@
         </div>
     </div>
 
-    <main class="mb-5" style="min-height: 600px;">
+    <main class="mb-5 mt-3" style="min-height: 600px;">
         <div class="container custom-container">
             <div class="inner-container">
                 <div class="row">
@@ -113,7 +118,10 @@
                                 </a>
                             {% endfor %}
                             {% else %}
-                                <p class="full text-center bold m-4">You haven't saved any restaurant yet.</p>
+                                <p class="full text-center bold m-4">You haven't saved any restaurant.</p>
+                                <div class="full text-center mb-5">
+                                    <i class="far fa-folder-open" style="font-size: 50px;"></i>
+                                </div>
                             {% endif %}
                         </div>                      
                     </div>
