--- a/reserveTime/core/templates/company-photos.html
+++ b/reserveTime/core/templates/company-photos.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
 
-    <title>Company List</title>
+    <title>Company Photos</title>
 
     <style>
         .col{
@@ -39,10 +39,18 @@
                         <nav>
                             <ul class="admin-menu-list">
                                 <li>
-                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                    <a href="{% url 'core:company-profile' user.company.pk %}">
                                         <div class="d-flex">
                                             <i class="fas fa-home"></i>
-                                            <span class="ml-2 bold">Home</span>
+                                            <span class="ml-2 bold">{{request.user.company.company_name}}</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-cog"></i>
+                                            <span class="ml-2 bold">Company Settings</span>
                                         </div>
                                     </a>
                                 </li>
