--- a/reserveTime/core/templates/company-users.html
+++ b/reserveTime/core/templates/company-users.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-    <title>Company List</title>
+    <title>Company Users</title>
 
     
 
@@ -33,10 +33,18 @@
                         <nav>
                             <ul class="admin-menu-list">
                                 <li>
-                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                    <a href="{% url 'core:company-profile' user.company.pk %}">
                                         <div class="d-flex">
                                             <i class="fas fa-home"></i>
-                                            <span class="ml-2 bold">Home</span>
+                                            <span class="ml-2 bold">{{request.user.company.company_name}}</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-cogs"></i>
+                                            <span class="ml-2 bold">Company Settings</span>
                                         </div>
                                     </a>
                                 </li>
@@ -99,36 +107,34 @@
                             <div class="user-box full">
                                 {% if reserved_users %}
                                     {% for user in reserved_users %}
-                                        {% ifchanged user.user %}
-                                            <div class="user-item row">
-                                                <div class="col-lg-3 comment-author">
-                                                    <div class="reserve-author-profile-img">{{user.user.first_name|slice:"1"}}{{user.user.last_name|slice:"1"}}</div>
-                                                    <div class="user-username">{{user.user.username}}</div>
-                                                    <div class="user-address">San Francisco</div>
-                                                    <div class="user-comments-count">
-                                                        <p class="review-text mr-4 ml-4"><i class="far fa-comment"></i> {% if user.reviews > 1 %}{{user.reviews}} reviews {% else %} {{user.reviews}} review{% endif %}</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-9">
-                                                    <div class="d-flex">
-                                                        <div class="posted-date pl-4">
-                                                            <p>Last Reservation on {{user.last_reserved_date}}</p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="d-flex">
-                                                        <div class="posted-date pl-4">
-                                                            <p>Number of reservations : {{user.reservation_count}} </p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="d-flex">
-                                                        <div class="posted-date pl-4">
-                                                            <p>Total money for all reservations : {{user.total_price}}$</p>
-                                                        </div>
-                                                    </div>
-                                                    
+                                        <div class="user-item row">
+                                            <div class="col-lg-3 comment-author">
+                                                <div class="reserve-author-profile-img">{{user.user.first_name|slice:"1"}}{{user.user.last_name|slice:"1"}}</div>
+                                                <div class="user-username">{{user.user.username}}</div>
+                                                <div class="user-address">San Francisco</div>
+                                                <div class="user-comments-count">
+                                                    <p class="review-text mr-4 ml-4"><i class="far fa-comment"></i> {% if user.reviews > 1 %}{{user.reviews}} reviews {% else %} {{user.reviews}} review{% endif %}</p>
                                                 </div>
                                             </div>
-                                        {% endifchanged %}
+                                            <div class="col-lg-9">
+                                                <div class="d-flex">
+                                                    <div class="posted-date pl-4">
+                                                        <p>Last Reservation on {{user.last_reserved_date}}</p>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="posted-date pl-4">
+                                                        <p>Number of reservations : {{user.reservation_count}} </p>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="posted-date pl-4">
+                                                        <p>Total money for all reservations : {{user.total_price}}$</p>
+                                                    </div>
+                                                </div>
+                                                
+                                            </div>
+                                        </div>
                                     {% endfor %}
                                 {% else %}
                                     <p class="full text-center bold">No Users Yet</p>
