--- a/reserveTime/core/templates/menu-detail.html
+++ b/reserveTime/core/templates/menu-detail.html
@@ -22,20 +22,28 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
+    {% include 'partials/mobile-menu.html' %}
 
-
-    <main>
-        <div class="full">
-            <div class="row justify-content-center">
+    <main class="full-h">
+        <div class="full full-h">
+            <div class="row full-h justify-content-center">
                 <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
                     <div class="admin-menu-box mt-5">
                         <nav>
                             <ul class="admin-menu-list">
                                 <li>
-                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                    <a href="{% url 'core:company-profile' user.company.pk %}">
                                         <div class="d-flex">
                                             <i class="fas fa-home"></i>
-                                            <span class="ml-2 bold">Home</span>
+                                            <span class="ml-2 bold">{{request.user.company.company_name}}</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-cogs"></i>
+                                            <span class="ml-2 bold">Company Settings</span>
                                         </div>
                                     </a>
                                 </li>
