--- a/reserveTime/core/templates/partials/header.html
+++ b/reserveTime/core/templates/partials/header.html
@@ -22,11 +22,11 @@
                             <!-- <span>Hello, {{request.user.first_name|capfirst}}</span> -->
                             <ul>
                                 {% if request.user.is_company %}
-                                    <li><a href="{% url 'core:company-profile' user.pk %}">
+                                    <li><a href="{% url 'core:company-profile' user.company.pk %}">
                                         <i class="fas fa-home mr-2"></i>
                                         {{request.user.company.company_name}}</a></li>
                                     <li><a href="{% url 'account:company-profile' user.pk %}">
-                                        <i class="fas fa-cogs mr-2"></i>
+                                        <i class="fas fa-cog mr-2"></i>
                                         Company Settings</a></li>
                                     <li><a href="{% url 'account:user-profile' user.pk %}">
                                         <i class="far fa-user-circle mr-2"></i>
