--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -675,8 +675,8 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
 
 .company-info-block .icon-block{
     display: flex;
-    align-items: center;
     margin-right: 10px;
+    margin-top: 5px;
 }
 
 .company-info-block p{
